[IHR2-6577] - update openapi graphqlquerybuilder (#442)
* [IHR2-6577] - work in progress

* [IHR2-6577] - work in progress

* [IHR2-6577] - work in progress

* [IHR2-6577] - remove x-dws-query.selector for now

* [IHR2-6577] - revert OAS

* [IHR2-6577] - fix bug

* [IHR2-6577] - refactor

* [IHR2-6577] - refactor

* [IHR2-6577] - remove code smells

* [IHR2-6577] - add composed querybuilder testcase + fix bug

* [IHR2-6577] - add composed with composed querybuilder testcase + process review comments

* [IHR2-6577] - fix test

* [IHR2-6577] - switch to parameterized test

* [IHR2-6577] - add test with array

* [IHR2-6577] - process review comments