@@ -1,58 +1,66 @@
 package org.dotwebstack.framework.service.openapi.query;
 
-import static org.dotwebstack.framework.core.helpers.ExceptionHelper.invalidConfigurationException;
+import static org.dotwebstack.framework.service.openapi.helper.OasConstants.X_DWS_EXPANDED_PARAMS;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-import graphql.language.FieldDefinition;
-import graphql.language.ObjectTypeDefinition;
-import graphql.language.ScalarTypeDefinition;
-import graphql.schema.idl.SchemaParser;
-import graphql.schema.idl.TypeDefinitionRegistry;
-import java.io.InputStreamReader;
-import java.io.Reader;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Objects;
+import io.swagger.v3.oas.models.OpenAPI;
+import io.swagger.v3.oas.models.Operation;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
+import java.util.List;
+import java.util.Map;
 import java.util.Set;
-import java.util.StringJoiner;
+import java.util.stream.Stream;
+import org.apache.commons.io.IOUtils;
 import org.dotwebstack.framework.core.InvalidConfigurationException;
-import org.dotwebstack.framework.core.query.GraphQlField;
-import org.dotwebstack.framework.core.query.GraphQlFieldBuilder;
-import org.dotwebstack.framework.core.scalars.CoreScalars;
-import org.junit.jupiter.api.BeforeEach;
+import org.dotwebstack.framework.service.openapi.HttpMethodOperation;
+import org.dotwebstack.framework.service.openapi.OpenApiConfiguration;
+import org.dotwebstack.framework.service.openapi.TestResources;
+import org.dotwebstack.framework.service.openapi.response.RequestBodyContextBuilder;
+import org.dotwebstack.framework.service.openapi.response.ResponseSchemaContext;
+import org.dotwebstack.framework.service.openapi.response.ResponseTemplateBuilder;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.http.HttpMethod;
 
 @ExtendWith(MockitoExtension.class)
 class QueryBuilderTest {
 
-  private TypeDefinitionRegistry registry;
+  private static OpenAPI openApi;
 
-  @BeforeEach
-  public void setup() {
-    this.registry = loadTypeDefinitionRegistry();
+  @BeforeAll
+  static void init() {
+    openApi = TestResources.openApi();
   }
 
-  @Test
-  void toQuery_returns_validQuery() {
-    this.registry.add(new ScalarTypeDefinition(CoreScalars.DATETIME.getName()));
-    FieldDefinition fieldDefinition = getQueryFieldDefinition("brewery");
+  @ParameterizedTest(name = "{4}")
+  @MethodSource("queryBuilderArgs")
+  void queryBuilder_returnsExpectedQuery(String path, String queryName, String expectedQuery,
+      Map<String, Object> inputParams, String displayName) {
+    ResponseSchemaContext responseSchemaContext = getResponseSchemaContext(path, queryName);
+    String query = new GraphQlQueryBuilder().toQuery(responseSchemaContext, inputParams)
+        .orElseThrow();
 
-    GraphQlFieldBuilder builder = new GraphQlFieldBuilder(this.registry);
-    GraphQlField queryField = builder.toGraphQlField(fieldDefinition, new HashMap<>());
+    assertEquals(expectedQuery, query);
+  }
 
-    StringJoiner bodyJoiner = new StringJoiner(",", "{", "}");
-    StringJoiner argumentJoiner = new StringJoiner(",");
-
-    new GraphQlQueryBuilder().addToQuery(queryField, new HashSet<>(), new HashSet<>(), bodyJoiner, argumentJoiner,
-        new HashMap<>(), true, "");
-
-    assertEquals("{brewery{identifier}}", bodyJoiner.toString());
+  private static Stream<Arguments> queryBuilderArgs() throws IOException {
+    return Stream.of(Arguments.arguments("/query1", "query1", loadQuery("query1.txt"), Map.of(), "valid query"),
+        Arguments.arguments("/query3/{query3_param1}", "query3", loadQuery("query3.txt"), Map.of("query3_param1", "v1"),
+            "query with arguments"),
+        Arguments.arguments("/query3/{query3_param1}", "query3", loadQuery("query3_exp.txt"),
+            Map.of("query3_param1", "v1", X_DWS_EXPANDED_PARAMS, List.of("o2_prop2")), "query with expand arguments"),
+        Arguments.arguments("/query5", "query5", loadQuery("query5.txt"), Map.of(), "query with composed root object"),
+        Arguments.arguments("/query15", "query5", loadQuery("query15.txt"), Map.of(),
+            "query with composed root object and nested composed object"),
+        Arguments.arguments("/query16", "query16", loadQuery("query16.txt"), Map.of(), "query with array"));
   }
 
   @Test
@@ -82,62 +90,38 @@ class QueryBuilderTest {
   }
 
   @Test
-  void toQuery_returns_validQueryWithArguments() {
-    this.registry.add(new ScalarTypeDefinition(CoreScalars.DATETIME.getName()));
-    FieldDefinition fieldDefinition = getQueryFieldDefinition("brewery");
+  void validate_throwsInvalidConfigurationException_withNoResponseTemplate() {
+    ResponseSchemaContext responseSchemaContext = getResponseSchemaContext("/query14", "query1");
 
-    GraphQlFieldBuilder builder = new GraphQlFieldBuilder(this.registry);
-    GraphQlField queryField = builder.toGraphQlField(fieldDefinition, new HashMap<>());
-
-    ImmutableMap<String, Object> arguments = ImmutableMap.of("identifier", "1");
-
-    StringJoiner bodyJoiner = new StringJoiner(",", "{", "}");
-    StringJoiner argumentJoiner = new StringJoiner(",");
-
-    new GraphQlQueryBuilder().addToQuery(queryField, new HashSet<>(), new HashSet<>(), bodyJoiner, argumentJoiner,
-        arguments, true, "");
-
-    assertEquals("$identifier: ID!", argumentJoiner.toString());
-    assertEquals("{brewery(identifier: $identifier){identifier}}", bodyJoiner.toString());
+    var graphQlQueryBuilder = new GraphQlQueryBuilder();
+    Map<String, Object> inputParams = Map.of();
+    assertThrows(InvalidConfigurationException.class,
+        () -> graphQlQueryBuilder.toQuery(responseSchemaContext, inputParams));
   }
 
-  @Test
-  void toQuery_returns_validQueryWithRequiredFieldsAndArguments() {
-    this.registry.add(new ScalarTypeDefinition(CoreScalars.DATETIME.getName()));
-    FieldDefinition breweryDefinition = getQueryFieldDefinition("brewery");
+  private ResponseSchemaContext getResponseSchemaContext(String path, String queryName) {
+    var responseTemplateBuilder = ResponseTemplateBuilder.builder()
+        .openApi(openApi)
+        .xdwsStringTypes(List.of())
+        .build();
+    var requestBodyContextBuilder = new RequestBodyContextBuilder(openApi);
 
-    GraphQlFieldBuilder builder = new GraphQlFieldBuilder(this.registry);
-    GraphQlField breweryField = builder.toGraphQlField(breweryDefinition, new HashMap<>());
+    Operation get = openApi.getPaths()
+        .get(path)
+        .getGet();
+    HttpMethodOperation httpOperation = HttpMethodOperation.builder()
+        .name(queryName)
+        .operation(get)
+        .httpMethod(HttpMethod.GET)
+        .build();
 
-    ImmutableMap<String, Object> arguments = ImmutableMap.of("identifier", "1");
-    Set<String> requiredFields = ImmutableSet.of("name", "beers", "beers.name", "beers.ingredients",
-        "beers.ingredients.name", "beers.supplements", "beers.supplements.name");
-    StringJoiner bodyJoiner = new StringJoiner(",", "{", "}");
-    StringJoiner argumentJoiner = new StringJoiner(",");
-
-    new GraphQlQueryBuilder().addToQuery(breweryField, requiredFields, new HashSet<>(), bodyJoiner, argumentJoiner,
-        arguments, true, "");
-
-    assertEquals("$identifier: ID!", argumentJoiner.toString());
-    assertEquals("{brewery(identifier: $identifier){identifier,name,beers{identifier,name,ingredients{identifier,name},"
-        + "supplements{identifier,name}}}}", bodyJoiner.toString());
+    return OpenApiConfiguration.buildResponseSchemaContext(httpOperation, responseTemplateBuilder,
+        requestBodyContextBuilder);
   }
 
-  private FieldDefinition getQueryFieldDefinition(String name) {
-    ObjectTypeDefinition query = (ObjectTypeDefinition) this.registry.getType("Query")
-        .orElseThrow(() -> invalidConfigurationException(""));
-    return query.getFieldDefinitions()
-        .stream()
-        .filter(fieldDefinition -> fieldDefinition.getName()
-            .equals(name))
-        .findFirst()
-        .orElseThrow(() -> invalidConfigurationException(""));
+  private static String loadQuery(String name) throws IOException {
+    return IOUtils.toString(QueryBuilderTest.class.getClassLoader()
+        .getResourceAsStream("queries/" + name), StandardCharsets.UTF_8);
   }
 
-  private TypeDefinitionRegistry loadTypeDefinitionRegistry() {
-    Reader reader = new InputStreamReader(Objects.requireNonNull(this.getClass()
-        .getClassLoader()
-        .getResourceAsStream("config/brewery.graphqls")));
-    return new SchemaParser().parse(reader);
-  }
 }
